--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "conventional-changelog fightme preset",
   "main": "src/index.js",
+  "sideEffects": false,
   "scripts": {
     "test": "jest"
   },
@@ -34,6 +35,7 @@
     "@types/jest": "^26.0.5",
     "conventional-changelog-core": "^4.1.7",
     "jest": "^26.1.0",
+    "jest-junit": "^11.0.1",
     "through2": "^4.0.2"
   }
 }
