--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,8 @@ aliases:
   - &update-pkg-version
     name: Updating Package Version
     command: |
+      echo "git-tag-version=false" > ~/cc-fm-preset/.npmrc
+      echo "allow-same-version=true" >> ~/cc-fm-preset/.npmrc
       npm version $CIRCLE_TAG
   - &publish-to-github
     name: Publish to Github Package Registry
@@ -90,10 +92,10 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/cc-fm-preset
+      - run: *update-pkg-version
       - run: *authenticate-github-registry
       - deploy: *publish-to-github
       - run: *authenticate-npm-registry
-      - run: *update-pkg-version
       - deploy: *publish-to-npm
 
 workflows:
