--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,11 +32,11 @@ aliases:
       npm version $CIRCLE_TAG
   - &publish-to-github
     name: Publish to Github Package Registry
-    command: npm publish dist --tag $PKG_TAG --access public --registry https://npm.pkg.github.com
+    command: npm publish --tag $PKG_TAG --access public --registry https://npm.pkg.github.com
 
   - &publish-to-npm
     name: Publish to NPM Package Registry
-    command: npm publish dist --tag $PKG_TAG --access public --registry https://registry.npmjs.org
+    command: npm publish --tag $PKG_TAG --access public --registry https://registry.npmjs.org
 
 # Defaults
 defaults: &defaults
